...
    <public type="id" name="list" id="0x7f090062" />
    <public type="id" name="listMode" id="0x7f090063" />
    <public type="id" name="list_item" id="0x7f090064" />
    <public type="id" name="media_actions" id="0x7f090065" />
    <public type="id" name="menu_about" id="0x7f090066" />
    <public type="id" name="menu_copy_session" id="0x7f090067" />
    <public type="id" name="menu_delete_session" id="0x7f090068" />
    <public type="id" name="menu_edit_session" id="0x7f090069" />
    <public type="id" name="menu_new_session" id="0x7f09006a" />
    <public type="id" name="menu_privacy" id="0x7f09006b" />
    <public type="id" name="menu_session_edit_help" id="0x7f09006c" />
    <public type="id" name="menu_settings" id="0x7f09006d" />
    <public type="id" name="message_ok" id="0x7f09006e" />
    <public type="id" name="message_scroll_view" id="0x7f09006f" />
...
    <public type="id" name="text" id="0x7f0900ae" />
    <public type="id" name="text2" id="0x7f0900af" />
    <public type="id" name="textSpacerNoButtons" id="0x7f0900b0" />
    <public type="id" name="textView" id="0x7f0900b1" />
    <public type="id" name="textView2" id="0x7f0900b2" />
    <public type="id" name="text_input_password_toggle" id="0x7f0900b3" />
    <public type="id" name="text_sitzung_beschreibung" id="0x7f0900b4" />
    <public type="id" name="text_sitzung_name" id="0x7f0900b5" />
    <public type="id" name="textview_sitzung_description" id="0x7f0900b6" />
    <public type="id" name="textview_sitzung_name" id="0x7f0900b7" />
    <public type="id" name="time" id="0x7f0900b8" />
    <public type="id" name="time_image" id="0x7f0900b9" />
    <public type="id" name="timerView" id="0x7f0900ba" />
    <public type="id" name="title" id="0x7f0900bb" />
...
    <public type="raw" name="dharma107" id="0x7f0d0002" />
    <public type="raw" name="dharmaschwarz88" id="0x7f0d0003" />
    <public type="raw" name="shomyo90" id="0x7f0d0004" />
    <public type="raw" name="tang164" id="0x7f0d0005" />
    <public type="raw" name="tib230" id="0x7f0d0006" />
    <public type="raw" name="zen97" id="0x7f0d0007" />
    <public type="string" name="abbrechen" id="0x7f0e0000" />
    <public type="string" name="abc_action_bar_home_description" id="0x7f0e0001" />
    <public type="string" name="abc_action_bar_home_description_format" id="0x7f0e0002" />
    <public type="string" name="abc_action_bar_home_subtitle_description_format" id="0x7f0e0003" />
    <public type="string" name="abc_action_bar_up_description" id="0x7f0e0004" />
    <public type="string" name="abc_action_menu_overflow_description" id="0x7f0e0005" />
    <public type="string" name="abc_action_mode_done" id="0x7f0e0006" />
...
    <public type="string" name="crash_dialog_text" id="0x7f0e0041" />
    <public type="string" name="crash_dialog_title" id="0x7f0e0042" />
    <public type="string" name="crash_toast_text" id="0x7f0e0043" />
    <public type="string" name="crash_user_email_label" id="0x7f0e0044" />
    <public type="string" name="default_section_name" id="0x7f0e0045" />
    <public type="string" name="demo_sess1_description" id="0x7f0e0046" />
    <public type="string" name="demo_sess1_name" id="0x7f0e0047" />
    <public type="string" name="demo_sess1_sec1_name" id="0x7f0e0048" />
    <public type="string" name="demo_sess1_sec2_name" id="0x7f0e0049" />
    <public type="string" name="demo_sess1_sec3_name" id="0x7f0e004a" />
    <public type="string" name="demo_sess1_sec4_name" id="0x7f0e004b" />
    <public type="string" name="demo_sess1_sec5_name" id="0x7f0e004c" />
    <public type="string" name="demo_sess1_sec6_name" id="0x7f0e004d" />
...
    <public type="string" name="no_session_exists" id="0x7f0e006a" />
    <public type="string" name="notification_text" id="0x7f0e006b" />
    <public type="string" name="notification_text_paused" id="0x7f0e006c" />
    <public type="string" name="notification_title" id="0x7f0e006d" />
    <public type="string" name="notification_title_paused" id="0x7f0e006e" />
    <public type="string" name="num_bells" id="0x7f0e006f" />
    <public type="string" name="ok" id="0x7f0e0070" />
    <public type="string" name="output_channels_alarm" id="0x7f0e0071" />
    <public type="string" name="output_channels_alarm_desc" id="0x7f0e0072" />
    <public type="string" name="output_channels_music" id="0x7f0e0073" />
    <public type="string" name="output_channels_music_desc" id="0x7f0e0074" />
    <public type="string" name="pref_desc_brightness" id="0x7f0e0075" />
    <public type="string" name="pref_desc_volume_bells" id="0x7f0e0076" />
...
    <public type="string" name="theme_value_light" id="0x7f0e00b5" />
    <public type="string" name="time_section_elapsed" id="0x7f0e00b6" />
    <public type="string" name="time_section_remaining" id="0x7f0e00b7" />
    <public type="string" name="time_session_elapsed" id="0x7f0e00b8" />
    <public type="string" name="time_session_remaining" id="0x7f0e00b9" />
    <public type="string" name="title_mute_perm_request" id="0x7f0e00ba" />
    <public type="string" name="title_question_delete_session" id="0x7f0e00bb" />
    <public type="string" name="title_volume_bells" id="0x7f0e00bc" />
    <public type="string" name="unnamed" id="0x7f0e00bd" />
    <public type="style" name="AcraDialog" id="0x7f0f0000" />
    <public type="style" name="AlertDialog.AppCompat" id="0x7f0f0001" />
    <public type="style" name="AlertDialog.AppCompat.Light" id="0x7f0f0002" />
    <public type="style" name="Animation.AppCompat.Dialog" id="0x7f0f0003" />
...
